--- a/index.html
+++ b/index.html
@@ -1286,5 +1286,7 @@
             console.log('Church Hall Hire Agreement form loaded successfully');
         });
     </script>
+    <!--updated -->
 </body>
 </html>
+
